完成ファイル

--- a/website/single.html
+++ b/website/single.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="ja" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
+<html lang="ja">
 <head>
 <meta charset="utf-8">
-<title>Baumkuchen</title>
+<title>Yoshitaka Kaiのポートフォリオ</title>
 <meta name="description"  content="">
 
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
@@ -16,20 +16,23 @@
  <body>
 
   <header id="header">
-        <p class="h1 text-warning">Baumkuchen</p>
+      <a href="portfolio01.html" class="align-items-center">
+        <strong>ロゴ</strong>
+      </a>
   </header>
 
 <div class="openbtn"><span></span><span></span><span></span></div>
 <nav id="g-nav">
 <div id="g-nav-list"><!--ナビの数が増えた場合縦スクロールするためのdiv※不要なら削除-->
 <ul>
-<li><a href="#">トップページ</a></li>
-<li><a href="#">商品紹介</a></li>
-<li><a href="#">おいしい理由</a></li>
-<li><a href="#">お知らせ</a></li>
-  <li><a href="#">採用情報</a></li>
-  <li><a href="#">お問い合わせ</a></li>
-  <li><a href="#">プライバシーポリシー</a></li>
+  <li><a href="portfolio01.html">TOP</a></li>
+<li><a href="single.html">メニュー1</a></li>
+<li><a href="single.html">メニュー2</a></li>
+<li><a href="single.html">メニュー3</a></li>
+<li><a href="single.html">メニュー4</a></li>
+  <li><a href="single.html">メニュー5</a></li>
+  <li><a href="single.html">メニュー6</a></li>
+  <li><a href="single.html">メニュー7</a></li>
 </ul>
 </div>
 </nav>
@@ -39,17 +42,15 @@
 
   <section class="py-5 text-center container top-image">
     <div class="row singletop-image-margin">
-        <h2 class="display-2 text-white">商品一覧</h2>
-      <p class="lead text-white"><br>
-        ◯◯◯◯◯◯◯◯◯◯◯◯◯◯◯◯◯◯◯◯◯◯◯◯<br>
-        ◯◯◯◯◯◯◯◯◯◯◯◯◯◯◯◯◯◯◯◯◯◯◯◯</p>
+        <h2 class="display-2 text-white">小見出し</h2>
+      <p class="lead text-white">◯◯◯◯◯◯◯◯◯◯◯◯◯◯◯<br>◯◯◯◯◯◯◯◯◯◯◯◯◯◯◯</p>
     </div>
   </section>
 
   <section class="py-5 text-center bg-white">
     <div class="container">
       <div class="row g-2">
-        <h2 class="display-5"><span class="badge rounded-pill bg-warning">甘さひかえめバーム</span></h2>
+        <h2 class="display-5"><span class="badge rounded-pill bg-warning">テキスト</span></h2>
     <div class="col-lg-4">
       <div class="p-3 border">
         <img src="img/img-top.jpg" class="rounded img-fluid" alt="...">
@@ -85,7 +86,7 @@
   </div>
 
       <div class="row g-2">
-        <h2 class="display-5"><span class="badge rounded-pill" style="background-color: hotpink;">しっとりふんわりバーム</span></h2>
+        <h2 class="display-5"><span class="badge rounded-pill" style="background-color: hotpink;">テキスト</span></h2>
     <div class="col-lg-4">
       <div class="p-3 border">
         <img src="img/img-top.jpg" class="rounded img-fluid" alt="...">
@@ -119,37 +120,29 @@
 <footer class=" py-5 bg-warning">
   <div class="container px-4">
   <div class="row gx-5">
-    <div class="col">
-       <div class="p-3 border">
-         <p class="h4">おいしいバウム</p>
-        <p>株式会社Baumkuchen<br>
-          〒000-0000<br>
-          ◯◯県◯◯市◯丁目◯番<br>
-          TEL: 000-0000-0000</p>
+
+  <div class="col-lg-4 text-center">
+    <a class="nav-link" href="portfolio01.html">TOP</a>
+  <a class="nav-link" href="single.html">メニュー1</a>
+  <a class="nav-link" href="single.html">メニュー2</a>
+  <a class="nav-link" href="single.html">メニュー3</a>
+  <a class="nav-link" href="single.html">メニュー4</a>
+    </div>
+
+        <div class="col-lg-4 text-center">
+  <a class="nav-link" href="single.html">メニュー5</a>
+  <a class="nav-link" href="single.html">メニュー6</a>
+  <a class="nav-link" href="single.html">メニュー7</a><br>
+    </div>
+
+        <div class="col-lg-3 text-center">
+        <p>株式会社◯◯◯◯◯</p>
+          <p>〒000-0000</p>
+          <p>◯◯県◯◯市◯丁目◯番</p>
+          <p>TEL: 000-0000-0000</p>
           <p>&copy;2023 Yoshitaka Kai</p>
-      </div>
     </div>
 
-    <div class="col">
-      <div class="p-3 border">
-
-<nav class="nav flex-column">
-  <a class="nav-link" href="#">トップページ</a>
-  <a class="nav-link" href="#">商品紹介</a>
-  <a class="nav-link" href="#">おいしい理由</a>
-  <a class="nav-link" href="#">お知らせ</a>
-</nav>
-      </div>
-    </div>
-
-        <div class="col">
-      <div class="p-3 border">
-
-  <a class="nav-link" href="#">採用情報</a>
-  <a class="nav-link" href="#">お問合せ</a>
-  <a class="nav-link" href="#">プライバシーポリシー</a>
-      </div>
-    </div>
   </div>
 </div>
 
