--- a/website/2columnpage/2column.html
+++ b/website/2columnpage/2column.html
@@ -16,7 +16,7 @@
  <body>
 
   <header id="header">
-      <a href="portfolio01.html" class="align-items-center">
+      <a href="2column.html" class="align-items-center">
         <strong>ロゴ</strong>
       </a>
   </header>
@@ -25,7 +25,7 @@
 <nav id="g-nav">
 <div id="g-nav-list"><!--ナビの数が増えた場合縦スクロールするためのdiv※不要なら削除-->
 <ul>
-  <li><a href="portfolio01.html">TOP</a></li>
+  <li><a href="2column.html">TOP</a></li>
 <li><a href="single.html">メニュー1</a></li>
 <li><a href="single.html">メニュー2</a></li>
 <li><a href="single.html">メニュー3</a></li>
@@ -112,7 +112,7 @@
   <div class="row gx-5">
 
     <div class="col-lg-4 text-center">
-  <a class="nav-link" href="portfolio01.html">TOP</a>
+  <a class="nav-link" href="2column.html">TOP</a>
   <a class="nav-link" href="single.html">メニュー1</a>
   <a class="nav-link" href="single.html">メニュー2</a>
   <a class="nav-link" href="single.html">メニュー3</a>
