--- a/website/CorporateSite/teensevent.html
+++ b/website/CorporateSite/teensevent.html
@@ -10,51 +10,50 @@
 
     <!-- Bootstrap core CSS -->
 <link href="bootstrap-5.3.0-alpha3-dist/css/bootstrap.css" rel="stylesheet">
-<link href="bootstrap-5.3.0-alpha3-dist/css/custom.css" rel="stylesheet">
+    <link href="bootstrap-5.3.0-alpha3-dist/css/custom02.css" rel="stylesheet">
+    <link href="bootstrap-5.3.0-alpha3-dist/css/custom03.css" rel="stylesheet">
   </head>
   <body>
 
-<nav class="navbar fixed-top navbar-expand-lg bg-body-tertiary">
+<nav class="navbar fixed-top navbar-expand-lg bg-danger">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#"><b>corporate site</b></a>
+<img src="images/TE01.png" class="nav-img-custom"></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0 nav-underline">
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="#">menu01</a>
+          <a class="nav-link link-light" aria-current="page" href="#"><p class="h5">menu01</p></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">menu02</a>
+          <a class="nav-link link-light" href="#"><p class="h5">menu02</p></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">menu03</a>
+          <a class="nav-link link-light" href="#"><p class="h5">menu03</p></a>
         </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            dropdown
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">menun05</a></li>
-            <li><a class="dropdown-item" href="#">menun06</a></li>
-            <li><a class="dropdown-item" href="#">menun07</a></li>
-          </ul>
+        <li class="nav-item">
+          <a class="nav-link link-light" href="#"><p class="h5">menu04</p></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link link-light" href="#"><p class="h5">menu05</p></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link link-light" href="#"><p class="h5">menu06</p></a>
         </li>
       </ul>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-info" type="submit">Search</button>
-      </form>
+
     </div>
   </div>
 </nav>
 
 <main>
   <section class="first-section">
-    <div class="container">
-      <p class="display-1 text-white">TEXT</p>
-      <p class="display-6 text-white">xxxxxxxxxxxxxxxx<br>xxxxxxxxxxx</p>
+    <div class="container text-center">
+      <img src="images/TE02.png">
+      <p class="display-1 fw-bold text-dark">MAINTITLExxxxxx</p>
+      <p class="display-5 w-semibold text-dark">READREAD</p>
+      <p class="display-5 w-semibold text-dark">2023/01/01<small>SUN.</small><p>
     </div>
   </section>
     <section class="bg-light">
@@ -68,7 +67,6 @@
       <button type="button" class="btn btn-info btn-lg">view more</button>
     </div>
   </section>
-
   <section class="bg-white section-padding">
     <div class="container">
       <p class="display-3">Jklmn Opqr</p>
