--- a/website/CorporateSite/hoikuen.html
+++ b/website/CorporateSite/hoikuen.html
@@ -115,8 +115,8 @@
   </div>
   </section>
 
-<section class="news-border">
-    <div class="container section-padding">
+<section class="section-padding bg-transparent news-border">
+    <div class="container">
       <p class="display-3 wf-nicomoji text-warning border-image-news">ほいくえんだより</p>
       <hr>
       <div class="section-padding">
