--- a/website/CorporateSite/teensevent.html
+++ b/website/CorporateSite/teensevent.html
@@ -46,8 +46,8 @@
 <main>
   <section class="first-section">
     <div class="container text-center">
-      <img src="images/TE01.png">
-      <p class="info-pink display-1 fw-bold">MUSIC&nbsp;&&nbsp;DANCE<br><i class="text-danger">teen&nbsp;girls</i>&nbsp;FESTIVAL</p>
+      <img src="images/TE01.png" class="img-custom">
+      <p class="info-pink display-4 fw-bold">MUSIC&nbsp;&&nbsp;DANCE<br><i class="text-danger">teen&nbsp;girls</i>&nbsp;FESTIVAL</p>
       <p class="info-pink display-5 w-semibold">READREAD</p>
       <p class="display-5 w-semibold info-pink">2023/01/01<small>&nbsp;SUN.</small><p>
 
@@ -61,7 +61,7 @@
     </div>
   </section>
 
-    <section class="pink-body section-padding">
+    <section class="pink-body section-padding text-center">
     <div class="container">
       <p class="text-light display-3 fw-bold">NEWS</p>
       <hr>
@@ -78,71 +78,57 @@
     </div>
   </section>
 
-  <section class="text-center bg-light section-padding">
-    <div class="container">
-      <div class="row">
-
-      <div class="col-lg-4">
-        <img src="images/TE01.png" style="margin-bottom: 4rem;">
-      </div>
-
-        <div class="col-lg-4 section-padding">
+  <section class="text-center bg-light">
+    <div class="container section-padding">
         <p class="display-4 fw-bold text-dark">TEXTTEXTxxxxx</p>
-      <p class="display-6 text-dark">ABCDEFGHIJKLMNopqr<br>StUvWXwz</p>
+      <p class="display-6 text-dark">ABCDEFGHIJKLMN<br>opqrStUvWXwz</p>
           <p>ABCDEFGHIJKLMNopqrStUvWXwz</p>
           <p>ABCDEFGHIJKLMNopqrStUvWXwz</p>
           <p class="display-6 text-dark">ABCDEFGHIJKLMNopqr<br>StUvWXwz</p>
-        </div>
-
-        <div class="col-lg-4">
-        <img src="images/TE04.png" style="margin-top: 4rem;">
-      </div>
-
-      </div>
     </div>
     </section>
 
-  <section class="pink-body text-light text-center section-padding">
+  <section class="pink-body text-light text-start section-padding">
     <div class="container">
-      <p class="display-3 fw-bold align-items-center">CAST</p>
-      <p class="display-6 fw-bold">DANCER</p>
+      <p class="display-3 fw-bold text-center">CAST</p>
+      <p class="display-6 text-center fw-bold">DANCER</p>
 
   <div class="row align-items-center btn-margin-bottom">
-    <div class="col-4">
-      <img src="images/TE-col01.jpg" alt="イメージ" class="img-custom">
-      <p class="display-6">aaaaaaa</p>
+    <div class="col-3">
+      <img src="images/TE-col01.jpg" alt="イメージ" class="thumbnail-img-custom">
+      <p class="h6 text-center">aaaaaaa</p>
     </div>
-    <div class="col-4">
-      <img src="images/TE-col02.jpg" alt="イメージ" class="img-custom">
-      <p class="display-6">aaaaaaa</p>
+    <div class="col-3">
+      <img src="images/TE-col02.jpg" alt="イメージ" class="thumbnail-img-custom">
+      <p class="h6 text-center">aaaaaaa</p>
     </div>
-    <div class="col-4">
-      <img src="images/TE-col03.jpg" alt="イメージ" class="img-custom">
-      <p class="display-6">aaaaaaa</p>
+    <div class="col-3">
+      <img src="images/TE-col03.jpg" alt="イメージ" class="thumbnail-img-custom">
+      <p class="h6 text-center">aaaaaaa</p>
     </div>
   </div>
 
-    <p class="display-6 fw-bold">SINGER</p>
+    <p class="display-6 text-center fw-bold">ARTIST</p>
        <div class="row align-items-center btn-margin-bottom">
-    <div class="col-4">
-      <img src="images/TE-col04.jpg" alt="イメージ" class="img-custom">
-      <p class="display-6">aaaaaaa</p>
+    <div class="col-3">
+      <img src="images/TE-col04.jpg" alt="イメージ" class="thumbnail-img-custom">
+      <p class="h6 text-center">aaaaaaa</p>
     </div>
-    <div class="col-4">
-      <img src="images/TE-col05.jpg" alt="イメージ" class="img-custom">
-      <p class="display-6">aaaaaaa</p>
+    <div class="col-3">
+      <img src="images/TE-col05.jpg" alt="イメージ" class="thumbnail-img-custom">
+      <p class="h6 text-center">aaaaaaa</p>
     </div>
-    <div class="col-4">
-      <img src="images/TE-col06.jpg" alt="イメージ" class="img-custom">
-      <p class="display-6">aaaaaaa</p>
+    <div class="col-3">
+      <img src="images/TE-col06.jpg" alt="イメージ" class="thumbnail-img-custom">
+      <p class="h6 text-center">aaaaaaa</p>
     </div>
-    <div class="col-4">
-      <img src="images/TE-col07.jpg" alt="イメージ" class="img-custom">
-      <p class="display-6">aaaaaaa</p>
+    <div class="col-3">
+      <img src="images/TE-col07.jpg" alt="イメージ" class="thumbnail-img-custom">
+      <p class="h6 text-center">aaaaaaa</p>
     </div>
-    <div class="col-4">
-      <img src="images/TE-col08.jpg" alt="イメージ" class="img-custom">
-      <p class="display-6">aaaaaaa</p>
+    <div class="col-3">
+      <img src="images/TE-col08.jpg" alt="イメージ" class="thumbnail-img-custom">
+      <p class="h6 text-center">aaaaaaa</p>
     </div>
     </div>
   </div>
@@ -153,25 +139,25 @@
       <p class="display-3 fw-bold align-items-center">FASHION SHOW</p>
 
   <div class="row align-items-center btn-margin-bottom">
-    <div class="col-4">
-      <img src="images/TE-col09.jpg" alt="イメージ" class="img-custom">
-      <p class="display-6">aaaaaaa</p>
+    <div class="col-3">
+      <img src="images/TE-col09.jpg" alt="イメージ" class="thumbnail-img-custom">
+      <p class="h6 text-center">aaaaaaa</p>
     </div>
-    <div class="col-4">
-      <img src="images/TE-col10.jpg" alt="イメージ" class="img-custom">
-      <p class="display-6">aaaaaaa</p>
+    <div class="col-3">
+      <img src="images/TE-col10.jpg" alt="イメージ" class="thumbnail-img-custom">
+      <p class="h6 text-center">aaaaaaa</p>
     </div>
-    <div class="col-4">
-      <img src="images/TE-col11.jpg" alt="イメージ" class="img-custom">
-      <p class="display-6">aaaaaaa</p>
+    <div class="col-3">
+      <img src="images/TE-col11.jpg" alt="イメージ" class="thumbnail-img-custom">
+      <p class="h6 text-center">aaaaaaa</p>
     </div>
-    <div class="col-4">
-      <img src="images/TE-col12.jpg" alt="イメージ" class="img-custom">
-      <p class="display-6">aaaaaaa</p>
+    <div class="col-3">
+      <img src="images/TE-col12.jpg" alt="イメージ" class="thumbnail-img-custom">
+      <p class="h6 text-center">aaaaaaa</p>
     </div>
-    <div class="col-4">
-      <img src="images/TE-col13.jpg" alt="イメージ" class="img-custom">
-      <p class="display-6">aaaaaaa</p>
+    <div class="col-3">
+      <img src="images/TE-col13.jpg" alt="イメージ" class="thumbnail-img-custom">
+      <p class="h6 text-center">aaaaaaa</p>
     </div>
   </div>
     </div>
@@ -186,7 +172,7 @@
       <p class="h3">OP</p>
       <p class="h3">QRstu</p>
     </div>
-    </div>
+
     </section>
 
   <section class="section-padding pink-body">
@@ -242,12 +228,12 @@
 
    <section class="section-padding pink-body">
     <p class="text-light text-center display-3 fw-bold">ACCESS</p>
-<iframe class="section-padding" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1662975.6312593226!2d138.45051476857827!3d35.50429603683115!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x605d1b87f02e57e7%3A0x2e01618b22571b89!2z5p2x5Lqs6YO9!5e0!3m2!1sja!2sjp!4v1682429931186!5m2!1sja!2sjp" style="width: 100%; height: 500px; border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1662975.6312593226!2d138.45051476857827!3d35.50429603683115!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x605d1b87f02e57e7%3A0x2e01618b22571b89!2z5p2x5Lqs6YO9!5e0!3m2!1sja!2sjp!4v1682429931186!5m2!1sja!2sjp" style="width: 100%; height: 500px; border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
   </section>
 
 <footer class="text-center section-padding footer-bg">
   <div class="container">
-<img src="images/TE01.png">
+<img src="images/TE01.png" class="img-custom">
       <p class="info-pink display-6 fw-bold">MUSIC&nbsp;&&nbsp;DANCE<br><i class="text-danger">teen&nbsp;girls</i>&nbsp;FESTIVAL</p>
     </div>
 
