--- a/website/CorporateSite/corporate.html
+++ b/website/CorporateSite/corporate.html
@@ -122,7 +122,7 @@
       <div class="row">
       <div class="col-lg-6">
         <p class="display-3">Abc Def Ghi</p>
-      <p class="display-5">xxxxxxxxxxxxxxxxxxxx</p>
+      <p class="h4">xxxxxxxxxxxxxxxxxxxx</p>
 
         <ul class="nav flex-column nav-underline btn-margin-bottom">
           <li class="nav-item">
