--- a/website/portfoliosite/corporate.html
+++ b/website/portfoliosite/corporate.html
@@ -79,46 +79,48 @@
 
     <div class="text-center">
   <div class="row align-items-center">
+    <div class="col-lg-4 section-padding">
+      <img class="img-col" src="images/icon01.png" alt="イメージ">
+      <p class="display-6">aaaaaaaaaa</p>
+      <p><button type="button" class="btn btn-info btn-lg">view more</button></p>
+    </div>
 
-    <div class="col-lg-4 col-margin">
-      <img src="images/icon01.png" alt="イメージ">
+    <div class="col-lg-4 section-padding">
+      <img class="img-col" src="images/icon01.png" alt="イメージ">
       <p class="display-6">aaaaaaaaaa</p>
       <p><button type="button" class="btn btn-info btn-lg">view more</button></p>
     </div>
-    <div class="col-lg-4">
-      <img src="images/icon01.png" alt="イメージ">
-      <p class="display-6">aaaaaaaaaa</p>
-      <p><button type="button" class="btn btn-info btn-lg">view more</button></p>
-    </div>
-    <div class="col-lg-4">
-      <img src="images/icon01.png" alt="イメージ">
-      <p class="display-6">aaaaaaaaaa</p>
-      <p><button type="button" class="btn btn-info btn-lg">view more</button></p>
-    </div>
-  </div>
 
-  <div class="row align-items-center">
-    <div class="col-lg-4">
-      <img src="images/icon01.png" alt="イメージ">
+    <div class="col-lg-4 section-padding">
+      <img class="img-col" src="images/icon01.png" alt="イメージ">
       <p class="display-6">aaaaaaaaaa</p>
       <p><button type="button" class="btn btn-info btn-lg">view more</button></p>
     </div>
-    <div class="col-lg-4">
-      <img src="images/icon01.png" alt="イメージ">
+
+    <div class="col-lg-4 section-padding">
+      <img class="img-col" src="images/icon01.png" alt="イメージ">
       <p class="display-6">aaaaaaaaaa</p>
       <p><button type="button" class="btn btn-info btn-lg">view more</button></p>
     </div>
-    <div class="col-lg-4">
-      <img src="images/icon01.png" alt="イメージ">
+
+    <div class="col-lg-4 section-padding">
+      <img class="img-col" src="images/icon01.png" alt="イメージ">
       <p class="display-6">aaaaaaaaaa</p>
       <p><button type="button" class="btn btn-info btn-lg">view more</button></p>
     </div>
+
+    <div class="col-lg-4 section-padding">
+      <img class="img-col" src="images/icon01.png" alt="イメージ">
+      <p class="display-6">aaaaaaaaaa</p>
+      <p><button type="button" class="btn btn-info btn-lg">view more</button></p>
+    </div>
+
     </div>
   </div>
   </section>
 
     <section class="bg-light section-padding">
-    <div class="container section-padding third-section">
+    <div class="container third-section">
       <div class="row">
       <div class="col-lg-6">
         <p class="display-3">Abc Def Ghi</p>
@@ -199,57 +201,18 @@
 <footer class="section-padding bg-dark">
   <div class="container">
     <div class="row">
-      <div class="col-lg-3 text-white">
+      <div class="col-lg-6 text-white">
         <p class="display-4 ">corporate site</p>
         <p>〒000-0000</p>
-        <p>xx県xxx市000-0-00</p>
+        <p>東京都xx0丁目0-0-0</p>
         <p>xxビルxx階</p>
       </div>
-      <div class="col-lg-3 btn-margin-bottom">
-  <ul class="nav flex-column nav-underline">
-  <li class="nav-item">
-    <a class="nav-link text-white" href="#">Link</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link text-white" href="#">Link</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link text-white" href="#">Link</a>
-  </li>
-</ul>
-      </div>
-
-      <div class="col-lg-3 btn-margin-bottom">
-  <ul class="nav flex-column nav-underline">
-  <li class="nav-item">
-    <a class="nav-link text-white" href="#">Link</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link text-white" href="#">Link</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link text-white" href="#">Link</a>
-  </li>
-</ul>
-      </div>
-
-      <div class="col-lg-3">
-  <ul class="nav flex-column nav-underline">
-  <li class="nav-item">
-    <a class="nav-link text-white" href="#">Link</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link text-white" href="#">Link</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link text-white" href="#">Link</a>
-  </li>
-</ul>
-        </div>
-      </div>
-      </div>
-
-    <p class="text-white bg-dark text-lg-end">©yoshitaka kai</p>
+    <div class="col-lg-6">
+      <iframe class="img-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1662975.6312593226!2d138.45051476857827!3d35.50429603683115!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x605d1b87f02e57e7%3A0x2e01618b22571b89!2z5p2x5Lqs6YO9!5e0!3m2!1sja!2sjp!4v1682429931186!5m2!1sja!2sjp" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+    </div>
+  </div>
+<div class="section-padding"><p class="text-white bg-dark text-lg-end">©yoshitaka kai</p></div>
 
 </footer>
 </main>
